service prop partial

--- a/app/src/main/res/layout/activity_service1.xml
+++ b/app/src/main/res/layout/activity_service1.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SubcatActivity">
+    tools:context=".Service1Activity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -24,13 +24,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:background="#ffffff"
-        android:id="@+id/recycler_service1"
+    <ExpandableListView
+        android:id="@+id/exp_listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+    </ExpandableListView>
 
 
 </LinearLayout>
