--- a/app/src/main/res/layout/service1_item.xml
+++ b/app/src/main/res/layout/service1_item.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    tools:context=".Service1Activity"
+    android:layout_width="match_parent"
+    android:layout_height="100dp">
+
+    <iammert.com.expandablelib.ExpandableLayout
+        android:id="@+id/service1_item_expandable"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:parentLayout="@layout/service1_item_parent_layout"
+        app:childLayout="@layout/service1_item_child_layout">
+
+    </iammert.com.expandablelib.ExpandableLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_height="1dp"
+        android:background="#a7a7a7"></View>
+
 
 </LinearLayout>
