--- a/app/src/main/res/layout/ad_banner_single_item.xml
+++ b/app/src/main/res/layout/ad_banner_single_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -10,7 +10,7 @@
         android:layout_margin="6dp"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
-        android:layout_width="match_parent"
-        android:layout_height="180dp" />
+        android:layout_width="300dp"
+        android:layout_height="150dp" />
 
 </LinearLayout>
