--- a/app/src/main/res/layout/subcat_item.xml
+++ b/app/src/main/res/layout/subcat_item.xml
@@ -2,33 +2,53 @@
 <LinearLayout
     android:id="@+id/subcat_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp">
-
-    <ImageView
-        android:id="@+id/subcat_image"
-        android:background="#ffffff"
-        android:src="@drawable/logo"
-        android:scaleType="fitCenter"
-        android:layout_width="80dp"
-        android:layout_height="50dp"/>
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical">
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/subcat_name"
+        <ImageView
+            android:id="@+id/subcat_image"
+            android:background="#00000000"
+            android:tint="#a1a1a1"
+            android:src="@drawable/ic_done_all_black_24dp"
+            android:layout_marginRight="20dp"
+            android:scaleType="fitCenter"
+            android:layout_gravity="center_vertical"
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Service Title"/>
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/subcat_name"
+                android:textColor="#202020"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Service Title gdfghfh"/>
+
+
+        </LinearLayout>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="10dp"
+        android:background="#cccccc"></View>
 
 </LinearLayout>
