--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/cart_root"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp">
 
@@ -47,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Price"
-        android:layout_marginVertical="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginHorizontal="20dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
@@ -58,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@id/cart_item_amount"
         android:layout_alignParentBottom="true"
-        android:layout_marginVertical="10dp"
+        android:layout_marginBottom="15dp"
         android:text="৳"/>
 
     <TextView
@@ -68,9 +70,11 @@
         android:text="500"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginVertical="10dp"
+        android:layout_marginBottom="15dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"/>
+
+
 
     <View
         android:layout_width="match_parent"
