--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="#f5f5f5"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:orientation="vertical"
+        android:background="@color/colorPrimary">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginTop="15dp"
+            android:paddingTop="2dp"
+            android:layout_marginHorizontal="15dp"
+            android:gravity="center_vertical"
+            android:background="@color/white">
+
+            <ImageView
+                android:id="@+id/home_logo_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/logo"
+                android:scaleType="fitXY"/>
+
+            <ImageButton
+                android:id="@+id/home_notification"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="5dp"
+                android:scaleType="fitXY"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/notification"
+                android:background="@color/transparent"
+                android:tint="@color/colorPrimary"
+                android:minHeight="40dp"
+                android:padding="0dp"/>
+
+            <ImageButton
+                android:id="@+id/home_search_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@id/home_notification"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_action_search"
+                android:background="@color/transparent"
+                android:tint="@color/colorPrimary"
+                android:minHeight="40dp"
+                android:padding="0dp"/>
+
+            <TextView
+                android:id="@+id/home_search_text"
+                android:layout_width="170dp"
+                android:layout_height="40dp"
+                android:textSize="15sp"
+                android:textAlignment="center"
+                android:gravity="center_vertical"
+                android:layout_toRightOf="@id/home_logo_icon"
+                android:text="Search your services"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 
     <android.support.v7.widget.RecyclerView
