--- a/app/src/main/res/layout/service_group.xml
+++ b/app/src/main/res/layout/service_group.xml
@@ -1,50 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.v7.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    
-    
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
 
-    <RelativeLayout
-        android:gravity="center_vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        
-        <View
-            android:layout_width="5dp"
-            android:layout_height="45dp"
-            android:background="@color/colorPrimary">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-        </View>
-
-        <TextView
-            android:id="@+id/service_group_title"
-            android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="15dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:text="Category Name"
-            android:textColor="#000000"/>
-
-        <Button
-            android:layout_marginRight="15dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:gravity="center"
-            android:text="See All"/>
-
-    </RelativeLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:background="#ffffff"
-        android:id="@+id/recycler_service_group"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </android.support.v7.widget.RecyclerView>
 
-</LinearLayout>
+
+        <RelativeLayout
+            android:gravity="center_vertical"
+            android:padding="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="25dp">
+
+
+
+            <TextView
+                android:id="@+id/service_group_title"
+                android:layout_width="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="5dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="Category Name"
+                android:textSize="12sp"
+                android:textColor="#000000"/>
+
+            <Button
+                android:layout_marginRight="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginVertical="0dp"
+                android:textAllCaps="false"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:background="@color/transparent"
+                android:textColor="#01a1f1"
+                android:minHeight="30dp"
+                android:padding="0dp"
+                android:text="See All"/>
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:background="#ffffff"
+            android:id="@+id/recycler_service_group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
