--- a/app/src/main/res/layout/service_group.xml
+++ b/app/src/main/res/layout/service_group.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:id="@+id/service_group_title"
                 android:layout_width="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_marginTop="4dp"
                 android:layout_marginLeft="5dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -35,11 +35,13 @@
                 android:textColor="#000000"/>
 
             <Button
+                android:id="@+id/service_group_see_all"
+                android:layout_centerInParent="true"
                 android:layout_marginRight="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:layout_marginVertical="0dp"
+                android:layout_marginVertical="1dp"
                 android:textAllCaps="false"
                 android:gravity="center"
                 android:textSize="14sp"
