--- a/app/src/main/res/layout/service_group_single_row.xml
+++ b/app/src/main/res/layout/service_group_single_row.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/trend_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="90dp"
     android:layout_height="80dp"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="2dp"
     android:layout_marginRight="0dp"
     android:gravity="center"
     android:orientation="vertical">
