--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#E64A19</color>
+    <color name="colorPrimary">#6a1b9a</color>
+    <color name="colorPrimaryDark">#38006b</color>
     <color name="colorAccent">#448AFF</color>
     <color name="transparent">#00000000</color>
     <color name="black">#000000</color>
     <color name="grey">#9c9c9c</color>
+    <color name="yellow">#f4c908</color>
     <color name="greyLight">#cfcfcf</color>
     <color name="ongoing">#026fae</color>
     <color name="served">#1e862e</color>
