Middle fragment added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="grey">#9c9c9c</color>
     <color name="yellow">#f4c908</color>
     <color name="greyLight">#cfcfcf</color>
+    <color name="greyLighter">#e4e4e4</color>
     <color name="ongoing">#026fae</color>
     <color name="served">#1e862e</color>
     <color name="cancelled">#e21313</color>
